Table names changed and moved.

--- a/app/src/main/res/layout/busstop_activity.xml
+++ b/app/src/main/res/layout/busstop_activity.xml
@@ -34,14 +34,16 @@
             <TableRow>
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
                     android:layout_column="0"
                     android:layout_weight="1"
-                    android:text="BusStop Name"
+                    android:text="Service"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:layout_width="30dp"
+                    android:layout_width="6dp"
+                    android:layout_height="match_parent"
                     android:layout_column="1"
                     android:layout_weight="1"
                     android:text="Time"
@@ -51,7 +53,7 @@
                     android:layout_width="30dp"
                     android:layout_column="2"
                     android:layout_weight="1"
-                    android:text="Service"
+                    android:text="Service Provider"
                     android:textStyle="bold"></TextView>
             </TableRow>
 
@@ -83,8 +85,8 @@
 
         <Spinner
             android:id="@+id/spinner_busstop"
-            android:layout_width="80dp"
-            android:layout_height="34dp"
+            android:layout_width="234dp"
+            android:layout_height="24dp"
             android:layout_marginStart="66dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
@@ -111,7 +113,7 @@
             android:id="@+id/confirm_busstop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="131dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="38dp"
             android:layout_marginEnd="16dp"
             android:onClick="showBusStop"
