--- a/app/src/main/res/layout/busstop_activity.xml
+++ b/app/src/main/res/layout/busstop_activity.xml
@@ -116,7 +116,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="38dp"
             android:layout_marginEnd="16dp"
-            android:onClick="showBusStopViaName"
+            android:onClick="redirectButton"
             android:text="@string/confirm_BusStop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
