--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,12 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_nav">
         <fragment
-            android:id="@+id/fragment"
+            android:id="@+id/nav_host_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="uk.ac.tees.honeycomb.velocity.fragments.MainFragment" />
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph"
+            android:name="androidx.navigation.fragment.NavHostFragment" />
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
