Changed layout and added API connection.

--- a/app/src/main/res/layout/activity_journey_planner.xml
+++ b/app/src/main/res/layout/activity_journey_planner.xml
@@ -106,4 +106,16 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/jpTo"
         app:layout_constraintTop_toBottomOf="@+id/jpFromText" />
+
+    <ListView
+        android:id="@+id/jpListView"
+        android:layout_width="411dp"
+        android:layout_height="366dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jpResults" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
